@@ -1,7 +1,6 @@
 TODO
 v0.4
 - add fences
-- add cameras
 - pit textures
 v0.5
 - smoothen terrain
