@@ -1,4 +1,5 @@
 v0.4
+- added cameras
 - tirewall textures
 - added turnmarks (none)
 - added race-selection picture
